Closed
Bug 226101
Opened 21 years ago
Closed 21 years ago
DRefTool analysis for MRJ files
Categories
(Core Graveyard :: Java: OJI, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
17.39 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/BackwardAdapter.cpp&rev=1.41&mark=901#896
Deref-error: "mStreamInfo"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/BackwardAdapter.cpp&rev=1.41&mark=1966#1961
Deref-error: "mLiveconnect"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/EmbeddedFrame.cpp&rev=1.7&mark=142#137
Deref-error: "evaluator"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/EmbeddedFrame.cpp&rev=1.7&mark=145#140
Deref-error: "evaluator"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/EmbeddedFrame.cpp&rev=1.7&mark=147#142
Deref-error: "evaluator"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=391#386
Deref-error: "mainEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=393#388
Deref-error: "mainEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=394#389
Deref-error: "mainEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=413#408
Deref-error: "sharedEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=415#410
Deref-error: "sharedEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp&rev=1.32&mark=427#422
Deref-error: "sharedEnv"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJNetworking.cpp&rev=1.8&mark=336#331
Deref-error: "inputStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=136#131
Deref-error: "pluginFactory"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=282#277
Deref-error: "instance"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=325#320
Deref-error: "mConsole"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=683#678
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=684#679
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=707#702
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=710#705
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=711#706
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=715#710
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=731#726
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=733#728
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=741#736
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp&rev=1.40&mark=743#738
Deref-error: "mContext"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=93#88
Deref-error: "mJavaScriptMonitor"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=97#92
Deref-error: "mJavaScriptMonitor"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=109#104
Deref-error: "mJavaScriptMonitor"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=124#119
Deref-error: "mJavaScriptMonitor"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=126#121
Deref-error: "mJavaScriptMonitor"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp&rev=1.9&mark=148#143
Deref-error: "mJavaScriptMonitor"
static void sendMessage(JNIEnv* env, JavaMessage* msg)
holds a strong reference to a CSecureEnv (leak). something should be done about
that...
Attachment #135819 -
Flags: superreview?(roc)
Attachment #135819 -
Flags: review?(beard)
Comment on attachment 135819 [details] [diff] [review]
handle alloc failure (-uwp8)
Oops, missed a check (spotted while doing MRJC)
Index: MRJPlugin.cpp
===================================================================
diff -uwp -r1.40 MRJPlugin.cpp
--- MRJPlugin.cpp
+++ MRJPlugin.cpp
@@ -251,6 +239,9 @@ NS_METHOD MRJPlugin::QueryInterface(cons
{
nsresult result = queryInterface(aIID, instancePtr);
if (result == NS_NOINTERFACE) {
+ if (!mConsole)
+ return NS_ERROR_NOT_AVAILABLE;
+
result = mConsole->queryInterface(aIID, instancePtr);
}
return result;
Comment on attachment 135819 [details] [diff] [review]
handle alloc failure (-uwp8)
looks good
Attachment #135819 -
Flags: superreview?(roc) → superreview+
Attachment #135819 -
Flags: review?(beard) → review?(roc)
Attachment #135819 -
Flags: review?(roc) → review+
Comment 4•21 years ago
|
||
shouldn't this bug be marked "FIXED" or "WONTFIX" (if its not fixed)? We are not
working on anything on old Mac anymore since Moz1.3.1, which is quite a long time.
this bug was waiting for me to get access to the box which had the non -w patch
(which happened about a week ago) and is now waiting for the tree to return to a
non closed state.
mozilla/plugin/oji/MRJ/plugin/Source/MRJNetworking.cpp 1.10
mozilla/plugin/oji/MRJ/plugin/Source/MRJPlugin.cpp 1.42
mozilla/plugin/oji/MRJ/plugin/Source/nsLiveConnect.cpp 1.11
mozilla/plugin/oji/MRJ/plugin/Source/BackwardAdapter.cpp 1.44
mozilla/plugin/oji/MRJ/plugin/Source/EmbeddedFrame.cpp 1.9
mozilla/plugin/oji/MRJ/plugin/Source/LiveConnectNativeMethods.cpp 1.34
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•