Bug 226101 DRefTool analysis for MRJ files r=roc sr=roc